<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Huertapps</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <color name="blue">#ff007fff</color>
    <color name="green">#ff00ff00</color>
    <string name="title_activity_conexion">Connexion bluetooth</string>
<string name="discoverable">Make discoverable</string>
 <string name="hello">Hello World, RemoteBluetooth!</string>
    <string name="btn_find">Find Device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Remote Bluetooth</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
    <string name="connect">Connect a device</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="not_connected">You are not connected to a device</string>
   
    <string name="activatebluetooth">Activar Bluetooth</string>
    <string name="textobluetooth">Es necesario activar el Bluetooth para conectarse a su huerta</string>
    <string name="Regar">Regar</string>
    <string name="Fertilizar">Fertilizar</string>
    <string name="Programar">Programar</string> 
    <string name="Estadisticas">Estadisticas</string>  
    <string name="Humedad">Humedad:</string>  
    <string name="Cagua">Cantidad de agua:</string>
    <string name="Cfertilizante">Cantidad de fertilizante:</string>
    <string name="bajo">Bajo</string>
    <string name="alto">Alto</string>
    <string name="medio">Medio</string>
</resources>
