<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    >
    
    <LinearLayout 
	    
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="2"
	    android:gravity="center"
    >
    
	    <TextView  
			android:id="@+id/txBienvenida"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:gravity="center"
	    	android:text="Menú Principal"
	    	android:textStyle="bold"
	    	android:textSize="25sp"
	    	android:textColor="#ffffff"
	    />
	    
	    <TextView  
			android:id="@+id/txPerfil"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:gravity="center"
	    	android:text="Bienvenido,Elige una opción"
	    	android:textStyle="bold"
	    	android:textColor="#ffffff"
	    />
    
    </LinearLayout>
    
    <TableLayout 
	    
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
	>
		
		<TableRow
			android:layout_weight="1"
			android:gravity="center"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:paddingBottom = "10dp"
		>

			<LinearLayout
			    
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:orientation="vertical"
			    android:paddingRight="20dp" >

			    <Button
			        android:id="@+id/btn_regar"
			        android:layout_width="106dp"
			        android:layout_height="115dp"
			        android:background="@drawable/regar" />

			    <TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:text="@string/Regar"
			        android:textColor="#ffffff"
			        android:textStyle="bold" 
			        android:textSize="20sp"/>
			</LinearLayout>

			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:orientation="vertical"
			    android:paddingLeft="20dp" >

			    <Button
			        android:id="@+id/btn_fertilizar"
			        android:layout_width="99dp"
			        android:layout_height="133dp"
			        android:background="@drawable/fertilizar" />

			    <TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:text="@string/Fertilizar"
			        android:textColor="#ffffff"
			        android:textStyle="bold"
			        android:textSize="20sp" />
			</LinearLayout>
		    
 		</TableRow>
 		
 		<TableRow
			android:layout_weight="1"
			android:gravity="center"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:paddingTop = "20dp"
			android:paddingBottom = "10dp"
		>
		
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:orientation="vertical"
			    android:paddingRight="20dp" >

			    <Button
			        android:id="@+id/btn_programar"
			        android:layout_width="110dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="215.84"
			        android:background="@drawable/programar"
			        android:padding="20dp" />

			    <TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:text="@string/Programar"
			        android:textColor="#ffffff"
			        android:textStyle="bold"
			        android:textSize="20sp" />
			</LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical"
		        android:paddingLeft="20dp" >

		        <Button
		            android:id="@+id/btn_estadisticas"
		            android:layout_width="79dp"
		            android:layout_height="75dp"
		            android:background="@drawable/estadisticas" />

		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:text="@string/Estadisticas"
		            android:textColor="#ffffff"
		            android:textSize="20sp"
		            android:textStyle="bold" />
		    </LinearLayout>
		    
 		</TableRow>
	
	</TableLayout>
    
    
    <TextView  
		android:id="@+id/txBienvenida"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:gravity="center"
    	android:textStyle="bold"
    	android:textColor="#ffffff"
    	android:text="Huertapps"
    />
    
    <TextView  
		android:id="@+id/txBienvenida"		
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:gravity="center"
    	android:textColor="#ffffff"  	
    	android:textStyle="bold"
    	android:text="2014. Medellín"
    />
    
</LinearLayout>